# Survey-Surface-QAQC

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  packages.txt  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  conda-ci.yml
.streamlit/: config.toml
data/: sample_points.csv
examples/: README.md
scripts/: generate_synthetic_points.py
survey_surface/: __init__.py  cli.py  contours.py  crs.py  grid.py  io.py  landxml.py  report.py  volumes.py
