[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survey-surface-qaqc"
version = "0.1.0"
description = "Build DEM from survey points, contours, cut/fill volumes, LandXML export, Streamlit viewer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Abdulrahman Hamad", email = "wadaln3ma@gmail.com" }]
keywords = ["gis", "surveying", "geomatics", "dem", "contours", "landxml", "civil3d"]
# Keep runtime deps in requirements.txt for now (easier for users)

[project.urls]
Homepage = "https://github.com/wadaln3ma/Survey-Surface-QAQC"

[project.scripts]
survey-surface = "survey_surface.cli:app"   # Typer app as CLI
