[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survey-surface"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "pandas>=1.5",
  "geopandas>=0.13",
  "rasterio>=1.3",
  "shapely>=2.0",
  "scipy>=1.10",
  "folium>=0.14",
  "pillow>=10.0",
  "matplotlib>=3.7",
  "affine>=2.4",
  "scikit-image>=0.22",
  "typer>=0.9",                 # <-- add this
]

[project.optional-dependencies]
app = ["streamlit>=1.31", "streamlit-folium>=0.18"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["survey_surface", "survey_surface.*"]
exclude = ["tests*", "docs*", "assets*", "data*"]

[tool.setuptools.package-data]
survey_surface = [
  "assets/**",
  "templates/**",
  "resources/**",
]
